Correct the file content panel and debug tab functionality, improve the config file and add the dark mode option